# COSNet_i

./: Community-Detection-within-Graphs.html  README.md  USAGE.md  batch_reindex_PDBs.sh  file_names.txt  requirements.txt  significance_file
Batch_files/: batch_calc_dist.sh
Data/: names_6gz5.txt  names_6snt.txt  significance_file_6gz5  significance_file_6gz5_SbSt  significance_file_6snt  significance_file_6snt_depleted  significance_file_6snt_enriched
Python_Modules/: Pimp_My_Network.py  Region_selection_infomap.py  batch_calc_dist.py  batch_reindex_pdb.py  calculate_distance.py  combination.py  contacts_from_dist.py  extract_sequence.py  intcryomics.py  intcryomics_sigassign.py  pimp_my_network.py  reindex_pdb_by_idx.py  split_cif_by_entity.py
Results/: IntCryOmics_4v7e_t12.txt  IntCryOmics_4v7e_t20.txt  IntCryOmics_4v7e_t5.txt  IntCryOmics_4v7e_t8.txt  edges_with_weights_4v7e_t12.txt  (+3 more)
cosneti/: .coveragerc  AUTHORS.rst  LICENSE.txt  README.md  README.rst  setup.cfg  setup.py
cosneti/docs/: conf.py  index.rst
cosneti/scripts/: batch_calc_dist.py  batch_reindex_pdb.py  calculate_distance.py  check_cif_completeness.py  combination.py  contacts_from_dist.py  extract_sequence.py  intcryomics.py  intcryomics_sigassign.py  pimp_my_network.py  reindex_pdb.py  split_cif_by_entity.py
cosneti/src/cosneti/: skeleton.py
cosneti/src/cosneti.egg-info/: PKG-INFO  SOURCES.txt
cosneti/src/modules/: batch_reindex_pdb.py  check_cif_completeness.py  contacts_from_dist.py  intcryomics.py  reindex_pdb.py
cosneti/tests/: conftest.py  test_skeleton.py
(+2 files in other folders)
