[metadata]
name = cosneti
version = 0.0.1
author = Federico Martinez-Seidel
author_email = mseidel@mpimp-golm.mpg.de
description = Integration of omics relative changes into sampled interaction networks translated from cryogenic or crystallographic based atomic structures of multiprotein complexes.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MSeidelFed/COSNet_i
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
